
- gbm.perf now puts a vertical line at the best number of trees when method = "cv" or "test". Tries to guess what method you meant if you don't tell it. 

- .First.lib had a bug that would crash gbm if gbm was installed as a local library. Fixed. 

- plot.gbm has a new argument, type, defaulting to "link". For bernoulli, multinomial, poisson, "response" is allowed.



Changes in version 1.6

- Quantile regression is now available thanks to a contribution from
Brian Kriegler. Use list(name="quantile",alpha=0.05) as the
distribution parameter to construct a predictor of the 5% of the
conditional distribution

- gbm() now stores cv.folds in the returned gbm object

- Added a normalize parameter to summary.gbm that allows one to
choose whether or not to normalize the variable influence to sum to
100 or not

- Corrected a minor bug in plot.gbm that put the wrong variable
label on the x axis when plotting a numeric variable and a factor
variable

- the C function gbm_plot can now handle missing values. This does
not effect the R function plot.gbm(), but it makes gbm_plot
potentially more useful for computing partial dependence plots

- mgcv is no longer a required package, but the splines package is
needed for calibrate.plot()

- minor changes for compatibility with R 2.6.0 (thanks to Seth
Falcon)

- corrected a bug in the cox model computation when all terminal
nodes had exactly the minimum number of observations permitted,
which caused gbm and R to crash ungracefully. This was likely to
occur with small datasets (thanks to Brian Ring)

- corrected a bug in Laplace that always made the terminal node
predictions slightly larger than the median. Corrected again in a
minor release due to a bug caught by Jon McAuliffe

- corrected a bug in interact.gbm that caused it to crash for factors.
Caught by David Carslaw

- added a plot of cross-validated error to the plots generated by gbm.perf


Changes in version 1.5